--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -136,7 +136,7 @@ input, textarea {
   }
 
 .grid-customize-container, .tags-container {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     height: 100%;
@@ -144,6 +144,7 @@ input, textarea {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: auto;
 }
 
 .grid-customize-header, .tags-header {
@@ -598,13 +599,13 @@ svg.svg-inline--fa.fa-tags.fa-w-20 {
     .grid-customize-container, .tags-container {
         position: fixed;
         top: 0;
-        /* right: 0; */
         height: 100%;
         background-color: #545454;
         display: flex;
         flex-direction: column;
         overflow-y: auto;
         align-items: center;
+        overflow-y: auto;
     }
 
     .create-tags form input {
